Initial commit of new React projects

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,6 @@
         "width": 3,
         "height": 3
     },
-    "mapping": []
+    "mapping": [],
+    "id": "78e67c2a-e62d-498a-9a08-d3814ddc397c"
 }
